Cambios en subir al navegador

--- a/angular.json
+++ b/angular.json
@@ -70,7 +70,8 @@
                                     "maximumError": "90kb"
                                 }
                             ],
-                            "outputHashing": "all"
+                            "outputHashing": "all",
+                            "baseHref": "/Trotapie/"
                         },
                         "development": {
                             "optimization": false,
