--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "start": "ng serve",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
-        "test": "ng test"
+        "test": "ng test",
+        "deploy": "ng build --configuration production && npx angular-cli-ghpages --dir=dist/fuse/browser"
     },
     "dependencies": {
         "@angular/animations": "19.0.5",
