--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "highlight.js": "11.11.1",
         "lodash-es": "4.17.21",
         "luxon": "3.5.0",
+        "moment": "^2.30.1",
         "ng-apexcharts": "1.15.0",
+        "ngx-daterangepicker-material": "^6.0.4",
         "ngx-quill": "27.0.0",
         "perfect-scrollbar": "1.5.6",
         "quill": "2.0.3",
@@ -51,6 +53,7 @@
         "@types/lodash": "4.17.13",
         "@types/lodash-es": "4.17.12",
         "@types/luxon": "3.4.2",
+        "@types/moment": "^2.13.0",
         "autoprefixer": "10.4.20",
         "chroma-js": "2.4.2",
         "jasmine-core": "5.1.2",
