--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "apexcharts": "4.3.0",
         "crypto-js": "4.2.0",
         "highlight.js": "11.11.1",
+        "leaflet": "^1.9.4",
         "lodash-es": "4.17.21",
         "luxon": "3.5.0",
         "moment": "^2.30.1",
@@ -50,6 +51,7 @@
         "@types/crypto-js": "4.2.2",
         "@types/highlight.js": "10.1.0",
         "@types/jasmine": "5.1.5",
+        "@types/leaflet": "^1.9.20",
         "@types/lodash": "4.17.13",
         "@types/lodash-es": "4.17.12",
         "@types/luxon": "3.4.2",
