--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@angular/platform-browser-dynamic": "19.0.5",
         "@angular/router": "19.0.5",
         "@jsverse/transloco": "7.5.1",
+        "@supabase/supabase-js": "^2.56.0",
+        "angularx-qrcode": "^20.0.0",
         "apexcharts": "4.3.0",
         "crypto-js": "4.2.0",
         "highlight.js": "11.11.1",
@@ -37,6 +39,7 @@
         "ngx-daterangepicker-material": "^6.0.4",
         "ngx-quill": "27.0.0",
         "perfect-scrollbar": "1.5.6",
+        "qrcode": "^1.5.4",
         "quill": "2.0.3",
         "rxjs": "7.8.1",
         "tslib": "2.8.1",
