--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,7 @@
                                 }
                             ],
                             "outputHashing": "all",
-                            "baseHref": "/Trotapie/"
+                            "baseHref": "/"
                         },
                         "development": {
                             "optimization": false,
