--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "dependencies": {
         "@angular/animations": "19.0.5",
-        "@angular/cdk": "19.0.4",
+        "@angular/cdk": "^19.0.4",
         "@angular/common": "19.0.5",
         "@angular/compiler": "19.0.5",
         "@angular/core": "19.0.5",
@@ -27,6 +27,7 @@
         "@angular/router": "19.0.5",
         "@jsverse/transloco": "7.5.1",
         "@supabase/supabase-js": "^2.56.0",
+        "@vercel/analytics": "^1.5.0",
         "angularx-qrcode": "^20.0.0",
         "apexcharts": "4.3.0",
         "crypto-js": "4.2.0",
