--- a/angular.json
+++ b/angular.json
@@ -126,5 +126,8 @@
                 }
             }
         }
+    },
+    "cli": {
+      "analytics": "545399ce-e94e-441d-9b86-2c4427152749"
     }
 }
