--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@jsverse/transloco": "7.5.1",
         "@supabase/supabase-js": "^2.56.0",
         "@vercel/analytics": "^1.5.0",
+        "@vercel/speed-insights": "^1.3.1",
         "angularx-qrcode": "^20.0.0",
         "apexcharts": "4.3.0",
         "crypto-js": "4.2.0",
